Made some descriptions on the dataframe

--- a/model.ipynb
+++ b/model.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5000 entries, 0 to 4999\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   genero                 4759 non-null   object \n",
+      " 1   idoso                  4735 non-null   float64\n",
+      " 2   parceiro               4762 non-null   object \n",
+      " 3   dependentes            4766 non-null   object \n",
+      " 4   tempoDeServico         4747 non-null   float64\n",
+      " 5   ServicoTelefone        4789 non-null   object \n",
+      " 6   MultiLinhas            4745 non-null   object \n",
+      " 7   ServicoInternet        4771 non-null   object \n",
+      " 8   ServicoSegurancaCyber  4778 non-null   object \n",
+      " 9   ServicoBackup          4737 non-null   object \n",
+      " 10  SeguroDispositivos     4750 non-null   object \n",
+      " 11  ServicoSuporteTecnico  4767 non-null   object \n",
+      " 12  StreamingTV            4751 non-null   object \n",
+      " 13  StreamingFilmes        4775 non-null   object \n",
+      " 14  Contrato               4738 non-null   object \n",
+      " 15  BillingDigital         4762 non-null   object \n",
+      " 16  MetodoPagamento        4756 non-null   object \n",
+      " 17  FaturaMensal           4726 non-null   float64\n",
+      " 18  FaturaTotal            4762 non-null   object \n",
+      " 19  NumTickets             4731 non-null   float64\n",
+      " 20  NumTicketsTecnico      4745 non-null   float64\n",
+      " 21  Churn                  4736 non-null   float64\n",
+      "dtypes: float64(6), object(16)\n",
+      "memory usage: 859.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -298,24 +343,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>genero</th>\n",
        "      <th>idoso</th>\n",
-       "      <th>parceiro</th>\n",
-       "      <th>dependentes</th>\n",
        "      <th>tempoDeServico</th>\n",
-       "      <th>ServicoTelefone</th>\n",
-       "      <th>MultiLinhas</th>\n",
-       "      <th>ServicoInternet</th>\n",
-       "      <th>ServicoSegurancaCyber</th>\n",
-       "      <th>ServicoBackup</th>\n",
-       "      <th>...</th>\n",
-       "      <th>StreamingTV</th>\n",
-       "      <th>StreamingFilmes</th>\n",
-       "      <th>Contrato</th>\n",
-       "      <th>BillingDigital</th>\n",
-       "      <th>MetodoPagamento</th>\n",
        "      <th>FaturaMensal</th>\n",
-       "      <th>FaturaTotal</th>\n",
        "      <th>NumTickets</th>\n",
        "      <th>NumTicketsTecnico</th>\n",
        "      <th>Churn</th>\n",
@@ -323,183 +353,110 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Masculino</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Sem serviço de internet</td>\n",
-       "      <td>Sem serviço de internet</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Sem serviço de internet</td>\n",
-       "      <td>Sem serviço de internet</td>\n",
-       "      <td>2 Anos</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Transferência Bancária (Automática)</td>\n",
-       "      <td>25.45</td>\n",
-       "      <td>809.25</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>count</th>\n",
+       "      <td>4735.000000</td>\n",
+       "      <td>4747.000000</td>\n",
+       "      <td>4726.000000</td>\n",
+       "      <td>4731.000000</td>\n",
+       "      <td>4745.000000</td>\n",
+       "      <td>4736.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Feminino</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>1 Ano</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Transferência Bancária (Automática)</td>\n",
-       "      <td>60.15</td>\n",
-       "      <td>2421.6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.163464</td>\n",
+       "      <td>32.158205</td>\n",
+       "      <td>64.801947</td>\n",
+       "      <td>0.503488</td>\n",
+       "      <td>0.411170</td>\n",
+       "      <td>0.263091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Feminino</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>2 Anos</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Cartão de Crédito (Automático)</td>\n",
-       "      <td>82.45</td>\n",
-       "      <td>5555.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>std</th>\n",
+       "      <td>0.369827</td>\n",
+       "      <td>29.592578</td>\n",
+       "      <td>35.930051</td>\n",
+       "      <td>1.260113</td>\n",
+       "      <td>1.230994</td>\n",
+       "      <td>0.440358</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Masculino</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Fibra óptica</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Mensal</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Cartão de Crédito (Automático)</td>\n",
-       "      <td>99.45</td>\n",
-       "      <td>919.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-112.000000</td>\n",
+       "      <td>-127.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Masculino</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Fibra óptica</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>1 Ano</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Transferência Bancária (Automática)</td>\n",
-       "      <td>98.05</td>\n",
-       "      <td>3082.1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>34.700000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>70.400000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>90.400000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>190.000000</td>\n",
+       "      <td>247.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      genero  idoso parceiro dependentes  tempoDeServico ServicoTelefone  \\\n",
-       "0  Masculino    0.0      Sim         Sim            35.0             Sim   \n",
-       "1   Feminino    0.0      Não         Não            42.0             Sim   \n",
-       "2   Feminino    0.0      Não         Não            69.0             Sim   \n",
-       "3  Masculino    1.0      Não         Não             9.0             Sim   \n",
-       "4  Masculino    0.0      Sim         Sim            31.0             Sim   \n",
+       "             idoso  tempoDeServico  FaturaMensal   NumTickets  \\\n",
+       "count  4735.000000     4747.000000   4726.000000  4731.000000   \n",
+       "mean      0.163464       32.158205     64.801947     0.503488   \n",
+       "std       0.369827       29.592578     35.930051     1.260113   \n",
+       "min       0.000000     -112.000000   -127.000000     0.000000   \n",
+       "25%       0.000000        8.000000     34.700000     0.000000   \n",
+       "50%       0.000000       29.000000     70.400000     0.000000   \n",
+       "75%       0.000000       56.000000     90.400000     0.000000   \n",
+       "max       1.000000      190.000000    247.000000     5.000000   \n",
        "\n",
-       "  MultiLinhas ServicoInternet    ServicoSegurancaCyber  \\\n",
-       "0         Sim             Não  Sem serviço de internet   \n",
-       "1         Sim             DSL                      NaN   \n",
-       "2         Não             DSL                      Sim   \n",
-       "3         NaN    Fibra óptica                      Não   \n",
-       "4         Sim    Fibra óptica                      Sim   \n",
-       "\n",
-       "             ServicoBackup  ...              StreamingTV  \\\n",
-       "0  Sem serviço de internet  ...  Sem serviço de internet   \n",
-       "1                      Sim  ...                      Não   \n",
-       "2                      Não  ...                      Sim   \n",
-       "3                      Sim  ...                      Sim   \n",
-       "4                      Não  ...                      Sim   \n",
-       "\n",
-       "           StreamingFilmes Contrato BillingDigital  \\\n",
-       "0  Sem serviço de internet   2 Anos            Não   \n",
-       "1                      Não    1 Ano            Sim   \n",
-       "2                      Sim   2 Anos            Sim   \n",
-       "3                      Sim   Mensal            Sim   \n",
-       "4                      Não    1 Ano            Não   \n",
-       "\n",
-       "                       MetodoPagamento FaturaMensal FaturaTotal  NumTickets  \\\n",
-       "0  Transferência Bancária (Automática)        25.45      809.25         0.0   \n",
-       "1  Transferência Bancária (Automática)        60.15      2421.6         0.0   \n",
-       "2       Cartão de Crédito (Automático)        82.45      5555.3         0.0   \n",
-       "3       Cartão de Crédito (Automático)        99.45       919.4         0.0   \n",
-       "4  Transferência Bancária (Automática)        98.05      3082.1         NaN   \n",
-       "\n",
-       "  NumTicketsTecnico  Churn  \n",
-       "0               0.0    0.0  \n",
-       "1               0.0    0.0  \n",
-       "2               0.0    0.0  \n",
-       "3               0.0    1.0  \n",
-       "4               0.0    0.0  \n",
-       "\n",
-       "[5 rows x 22 columns]"
+       "       NumTicketsTecnico        Churn  \n",
+       "count        4745.000000  4736.000000  \n",
+       "mean            0.411170     0.263091  \n",
+       "std             1.230994     0.440358  \n",
+       "min             0.000000     0.000000  \n",
+       "25%             0.000000     0.000000  \n",
+       "50%             0.000000     0.000000  \n",
+       "75%             0.000000     1.000000  \n",
+       "max             8.000000     1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.describe()"
    ]
   }
  ],
