--- a/model.ipynb
+++ b/model.ipynb
@@ -4,31 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fazendo os imports necessários"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Lendo os dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "df = pd.read_csv(\"https://raw.githubusercontent.com/FelipeMMMendes/Machine-Learning-Churn-Project/main/Data/train_churn.csv\", delimiter=\";\")"
    ]
   },
@@ -41,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +239,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +305,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#temos que fazer algumas normalizações dos dados, têm colunas que podem ser transformadas em números binários\n",
+    "#coluna genero\n",
+    "#Masculino vai passar a ser 1\n",
+    "#Feminino vai passar a ser 0\n",
+    "df['genero'] = df['genero'].map({'Masculino': 1, 'Feminino': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#coluna parceiro\n",
+    "#Se tem parceiro (SIM) vai passar a ser 1\n",
+    "#Se não tem parceiro (NÃO) vai passar a ser 0\n",
+    "df['parceiro'] = df['parceiro'].map({'Sim': 1, 'Não': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#coluna dependentes\n",
+    "#Se tem dependentes (SIM) vai passar a ser 1\n",
+    "#Se não tem dependentes (NÃO) vai passar a ser 0\n",
+    "df['dependentes'] = df['dependentes'].map({'Sim': 1, 'Não': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +366,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>genero</th>\n",
        "      <th>idoso</th>\n",
+       "      <th>parceiro</th>\n",
+       "      <th>dependentes</th>\n",
        "      <th>tempoDeServico</th>\n",
        "      <th>FaturaMensal</th>\n",
        "      <th>NumTickets</th>\n",
@@ -354,7 +380,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
+       "      <td>4759.00000</td>\n",
        "      <td>4735.000000</td>\n",
+       "      <td>4762.000000</td>\n",
+       "      <td>4766.000000</td>\n",
        "      <td>4747.000000</td>\n",
        "      <td>4726.000000</td>\n",
        "      <td>4731.000000</td>\n",
@@ -363,7 +392,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
+       "      <td>0.50851</td>\n",
        "      <td>0.163464</td>\n",
+       "      <td>0.487400</td>\n",
+       "      <td>0.304029</td>\n",
        "      <td>32.158205</td>\n",
        "      <td>64.801947</td>\n",
        "      <td>0.503488</td>\n",
@@ -372,7 +404,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
+       "      <td>0.49998</td>\n",
        "      <td>0.369827</td>\n",
+       "      <td>0.499894</td>\n",
+       "      <td>0.460043</td>\n",
        "      <td>29.592578</td>\n",
        "      <td>35.930051</td>\n",
        "      <td>1.260113</td>\n",
@@ -381,6 +416,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>-112.000000</td>\n",
        "      <td>-127.000000</td>\n",
@@ -390,6 +428,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>34.700000</td>\n",
@@ -399,6 +440,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>29.000000</td>\n",
        "      <td>70.400000</td>\n",
@@ -408,7 +452,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
+       "      <td>1.00000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>56.000000</td>\n",
        "      <td>90.400000</td>\n",
        "      <td>0.000000</td>\n",
@@ -417,6 +464,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>190.000000</td>\n",
        "      <td>247.000000</td>\n",
@@ -429,34 +479,62 @@
        "</div>"
       ],
       "text/plain": [
-       "             idoso  tempoDeServico  FaturaMensal   NumTickets  \\\n",
-       "count  4735.000000     4747.000000   4726.000000  4731.000000   \n",
-       "mean      0.163464       32.158205     64.801947     0.503488   \n",
-       "std       0.369827       29.592578     35.930051     1.260113   \n",
-       "min       0.000000     -112.000000   -127.000000     0.000000   \n",
-       "25%       0.000000        8.000000     34.700000     0.000000   \n",
-       "50%       0.000000       29.000000     70.400000     0.000000   \n",
-       "75%       0.000000       56.000000     90.400000     0.000000   \n",
-       "max       1.000000      190.000000    247.000000     5.000000   \n",
+       "           genero        idoso     parceiro  dependentes  tempoDeServico  \\\n",
+       "count  4759.00000  4735.000000  4762.000000  4766.000000     4747.000000   \n",
+       "mean      0.50851     0.163464     0.487400     0.304029       32.158205   \n",
+       "std       0.49998     0.369827     0.499894     0.460043       29.592578   \n",
+       "min       0.00000     0.000000     0.000000     0.000000     -112.000000   \n",
+       "25%       0.00000     0.000000     0.000000     0.000000        8.000000   \n",
+       "50%       1.00000     0.000000     0.000000     0.000000       29.000000   \n",
+       "75%       1.00000     0.000000     1.000000     1.000000       56.000000   \n",
+       "max       1.00000     1.000000     1.000000     1.000000      190.000000   \n",
        "\n",
-       "       NumTicketsTecnico        Churn  \n",
-       "count        4745.000000  4736.000000  \n",
-       "mean            0.411170     0.263091  \n",
-       "std             1.230994     0.440358  \n",
-       "min             0.000000     0.000000  \n",
-       "25%             0.000000     0.000000  \n",
-       "50%             0.000000     0.000000  \n",
-       "75%             0.000000     1.000000  \n",
-       "max             8.000000     1.000000  "
+       "       FaturaMensal   NumTickets  NumTicketsTecnico        Churn  \n",
+       "count   4726.000000  4731.000000        4745.000000  4736.000000  \n",
+       "mean      64.801947     0.503488           0.411170     0.263091  \n",
+       "std       35.930051     1.260113           1.230994     0.440358  \n",
+       "min     -127.000000     0.000000           0.000000     0.000000  \n",
+       "25%       34.700000     0.000000           0.000000     0.000000  \n",
+       "50%       70.400000     0.000000           0.000000     0.000000  \n",
+       "75%       90.400000     0.000000           0.000000     1.000000  \n",
+       "max      247.000000     5.000000           8.000000     1.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modelo CatBoostClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modelo Rede Neural"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modelo Árvore de Decisão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modelo Regressão Logística"
    ]
   }
  ],
