--- a/model.ipynb
+++ b/model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,9 @@
        "      <th>MultiLinhas</th>\n",
        "      <th>ServicoInternet</th>\n",
        "      <th>ServicoSegurancaCyber</th>\n",
-       "      <th>...</th>\n",
+       "      <th>ServicoBackup</th>\n",
+       "      <th>SeguroDispositivos</th>\n",
+       "      <th>ServicoSuporteTecnico</th>\n",
        "      <th>StreamingTV</th>\n",
        "      <th>StreamingFilmes</th>\n",
        "      <th>Contrato</th>\n",
@@ -87,7 +89,9 @@
        "      <td>Sim</td>\n",
        "      <td>Não</td>\n",
        "      <td>Sem serviço de internet</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Sem serviço de internet</td>\n",
+       "      <td>Sem serviço de internet</td>\n",
+       "      <td>Sem serviço de internet</td>\n",
        "      <td>Sem serviço de internet</td>\n",
        "      <td>Sem serviço de internet</td>\n",
        "      <td>2 Anos</td>\n",
@@ -111,7 +115,9 @@
        "      <td>Sim</td>\n",
        "      <td>DSL</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>Não</td>\n",
+       "      <td>Não</td>\n",
        "      <td>Não</td>\n",
        "      <td>Não</td>\n",
        "      <td>1 Ano</td>\n",
@@ -135,7 +141,9 @@
        "      <td>Não</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Sim</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Não</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>Sim</td>\n",
        "      <td>Sim</td>\n",
        "      <td>Sim</td>\n",
        "      <td>2 Anos</td>\n",
@@ -159,7 +167,9 @@
        "      <td>NaN</td>\n",
        "      <td>Fibra óptica</td>\n",
        "      <td>Não</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>Não</td>\n",
+       "      <td>Não</td>\n",
        "      <td>Sim</td>\n",
        "      <td>Sim</td>\n",
        "      <td>Mensal</td>\n",
@@ -183,7 +193,9 @@
        "      <td>Sim</td>\n",
        "      <td>Fibra óptica</td>\n",
        "      <td>Sim</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Não</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>Não</td>\n",
        "      <td>Sim</td>\n",
        "      <td>Não</td>\n",
        "      <td>1 Ano</td>\n",
@@ -197,49 +209,20 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0     genero  idoso parceiro dependentes  tempoDeServico  \\\n",
-       "0        6027  Masculino    0.0      Sim         Sim            35.0   \n",
-       "1        1961   Feminino    0.0      Não         Não            42.0   \n",
-       "2        5308   Feminino    0.0      Não         Não            69.0   \n",
-       "3        3587  Masculino    1.0      Não         Não             9.0   \n",
-       "4         576  Masculino    0.0      Sim         Sim            31.0   \n",
-       "\n",
-       "  ServicoTelefone MultiLinhas ServicoInternet    ServicoSegurancaCyber  ...  \\\n",
-       "0             Sim         Sim             Não  Sem serviço de internet  ...   \n",
-       "1             Sim         Sim             DSL                      NaN  ...   \n",
-       "2             Sim         Não             DSL                      Sim  ...   \n",
-       "3             Sim         NaN    Fibra óptica                      Não  ...   \n",
-       "4             Sim         Sim    Fibra óptica                      Sim  ...   \n",
-       "\n",
-       "               StreamingTV          StreamingFilmes Contrato BillingDigital  \\\n",
-       "0  Sem serviço de internet  Sem serviço de internet   2 Anos            Não   \n",
-       "1                      Não                      Não    1 Ano            Sim   \n",
-       "2                      Sim                      Sim   2 Anos            Sim   \n",
-       "3                      Sim                      Sim   Mensal            Sim   \n",
-       "4                      Sim                      Não    1 Ano            Não   \n",
-       "\n",
-       "                       MetodoPagamento FaturaMensal FaturaTotal NumTickets  \\\n",
-       "0  Transferência Bancária (Automática)        25.45      809.25        0.0   \n",
-       "1  Transferência Bancária (Automática)        60.15      2421.6        0.0   \n",
-       "2       Cartão de Crédito (Automático)        82.45      5555.3        0.0   \n",
-       "3       Cartão de Crédito (Automático)        99.45       919.4        0.0   \n",
-       "4  Transferência Bancária (Automática)        98.05      3082.1        NaN   \n",
-       "\n",
-       "   NumTicketsTecnico Churn  \n",
-       "0                0.0   0.0  \n",
-       "1                0.0   0.0  \n",
-       "2                0.0   0.0  \n",
-       "3                0.0   1.0  \n",
-       "4                0.0   0.0  \n",
+       "   Unnamed: 0     genero  idoso  ... NumTickets NumTicketsTecnico  Churn\n",
+       "0        6027  Masculino    0.0  ...        0.0               0.0    0.0\n",
+       "1        1961   Feminino    0.0  ...        0.0               0.0    0.0\n",
+       "2        5308   Feminino    0.0  ...        0.0               0.0    0.0\n",
+       "3        3587  Masculino    1.0  ...        0.0               0.0    1.0\n",
+       "4         576  Masculino    0.0  ...        NaN               0.0    0.0\n",
        "\n",
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -479,28 +462,20 @@
        "</div>"
       ],
       "text/plain": [
-       "           genero        idoso     parceiro  dependentes  tempoDeServico  \\\n",
-       "count  4759.00000  4735.000000  4762.000000  4766.000000     4747.000000   \n",
-       "mean      0.50851     0.163464     0.487400     0.304029       32.158205   \n",
-       "std       0.49998     0.369827     0.499894     0.460043       29.592578   \n",
-       "min       0.00000     0.000000     0.000000     0.000000     -112.000000   \n",
-       "25%       0.00000     0.000000     0.000000     0.000000        8.000000   \n",
-       "50%       1.00000     0.000000     0.000000     0.000000       29.000000   \n",
-       "75%       1.00000     0.000000     1.000000     1.000000       56.000000   \n",
-       "max       1.00000     1.000000     1.000000     1.000000      190.000000   \n",
+       "           genero        idoso  ...  NumTicketsTecnico        Churn\n",
+       "count  4759.00000  4735.000000  ...        4745.000000  4736.000000\n",
+       "mean      0.50851     0.163464  ...           0.411170     0.263091\n",
+       "std       0.49998     0.369827  ...           1.230994     0.440358\n",
+       "min       0.00000     0.000000  ...           0.000000     0.000000\n",
+       "25%       0.00000     0.000000  ...           0.000000     0.000000\n",
+       "50%       1.00000     0.000000  ...           0.000000     0.000000\n",
+       "75%       1.00000     0.000000  ...           0.000000     1.000000\n",
+       "max       1.00000     1.000000  ...           8.000000     1.000000\n",
        "\n",
-       "       FaturaMensal   NumTickets  NumTicketsTecnico        Churn  \n",
-       "count   4726.000000  4731.000000        4745.000000  4736.000000  \n",
-       "mean      64.801947     0.503488           0.411170     0.263091  \n",
-       "std       35.930051     1.260113           1.230994     0.440358  \n",
-       "min     -127.000000     0.000000           0.000000     0.000000  \n",
-       "25%       34.700000     0.000000           0.000000     0.000000  \n",
-       "50%       70.400000     0.000000           0.000000     0.000000  \n",
-       "75%       90.400000     0.000000           0.000000     1.000000  \n",
-       "max      247.000000     5.000000           8.000000     1.000000  "
+       "[8 rows x 9 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,11 +485,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#separação em variáveis alvo e auxiliares\n",
+    "Y = df['Churn']\n",
+    "X = df.drop('Churn',axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,Y,test_size=0.2,random_state=42)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Modelo CatBoostClassifier"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fazendo os imports necessarios\n",
+    "from catboost import CatBoostClassifier\n",
+    "\n",
+    "model_catboost = CatBoostClassifier(iterations=1000, learning_rate=0.1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
