Made normalizations on some columns

--- a/model.ipynb
+++ b/model.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"https://raw.githubusercontent.com/FelipeMMMendes/Machine-Learning-Churn-Project/main/Data/train_churn.csv\", delimiter=\";\")"
+    "df_raw = pd.read_csv(\"https://raw.githubusercontent.com/FelipeMMMendes/Machine-Learning-Churn-Project/main/Data/train_churn.csv\", delimiter=\";\")"
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,9 +61,7 @@
        "      <th>MultiLinhas</th>\n",
        "      <th>ServicoInternet</th>\n",
        "      <th>ServicoSegurancaCyber</th>\n",
-       "      <th>ServicoBackup</th>\n",
-       "      <th>SeguroDispositivos</th>\n",
-       "      <th>ServicoSuporteTecnico</th>\n",
+       "      <th>...</th>\n",
        "      <th>StreamingTV</th>\n",
        "      <th>StreamingFilmes</th>\n",
        "      <th>Contrato</th>\n",
@@ -89,9 +87,7 @@
        "      <td>Sim</td>\n",
        "      <td>Não</td>\n",
        "      <td>Sem serviço de internet</td>\n",
-       "      <td>Sem serviço de internet</td>\n",
-       "      <td>Sem serviço de internet</td>\n",
-       "      <td>Sem serviço de internet</td>\n",
+       "      <td>...</td>\n",
        "      <td>Sem serviço de internet</td>\n",
        "      <td>Sem serviço de internet</td>\n",
        "      <td>2 Anos</td>\n",
@@ -115,9 +111,7 @@
        "      <td>Sim</td>\n",
        "      <td>DSL</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Não</td>\n",
+       "      <td>...</td>\n",
        "      <td>Não</td>\n",
        "      <td>Não</td>\n",
        "      <td>1 Ano</td>\n",
@@ -141,9 +135,7 @@
        "      <td>Não</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Sim</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Sim</td>\n",
+       "      <td>...</td>\n",
        "      <td>Sim</td>\n",
        "      <td>Sim</td>\n",
        "      <td>2 Anos</td>\n",
@@ -167,9 +159,7 @@
        "      <td>NaN</td>\n",
        "      <td>Fibra óptica</td>\n",
        "      <td>Não</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Não</td>\n",
+       "      <td>...</td>\n",
        "      <td>Sim</td>\n",
        "      <td>Sim</td>\n",
        "      <td>Mensal</td>\n",
@@ -193,9 +183,7 @@
        "      <td>Sim</td>\n",
        "      <td>Fibra óptica</td>\n",
        "      <td>Sim</td>\n",
-       "      <td>Não</td>\n",
-       "      <td>Sim</td>\n",
-       "      <td>Não</td>\n",
+       "      <td>...</td>\n",
        "      <td>Sim</td>\n",
        "      <td>Não</td>\n",
        "      <td>1 Ano</td>\n",
@@ -209,41 +197,74 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0     genero  idoso  ... NumTickets NumTicketsTecnico  Churn\n",
-       "0        6027  Masculino    0.0  ...        0.0               0.0    0.0\n",
-       "1        1961   Feminino    0.0  ...        0.0               0.0    0.0\n",
-       "2        5308   Feminino    0.0  ...        0.0               0.0    0.0\n",
-       "3        3587  Masculino    1.0  ...        0.0               0.0    1.0\n",
-       "4         576  Masculino    0.0  ...        NaN               0.0    0.0\n",
+       "   Unnamed: 0     genero  idoso parceiro dependentes  tempoDeServico  \\\n",
+       "0        6027  Masculino    0.0      Sim         Sim            35.0   \n",
+       "1        1961   Feminino    0.0      Não         Não            42.0   \n",
+       "2        5308   Feminino    0.0      Não         Não            69.0   \n",
+       "3        3587  Masculino    1.0      Não         Não             9.0   \n",
+       "4         576  Masculino    0.0      Sim         Sim            31.0   \n",
+       "\n",
+       "  ServicoTelefone MultiLinhas ServicoInternet    ServicoSegurancaCyber  ...  \\\n",
+       "0             Sim         Sim             Não  Sem serviço de internet  ...   \n",
+       "1             Sim         Sim             DSL                      NaN  ...   \n",
+       "2             Sim         Não             DSL                      Sim  ...   \n",
+       "3             Sim         NaN    Fibra óptica                      Não  ...   \n",
+       "4             Sim         Sim    Fibra óptica                      Sim  ...   \n",
+       "\n",
+       "               StreamingTV          StreamingFilmes Contrato BillingDigital  \\\n",
+       "0  Sem serviço de internet  Sem serviço de internet   2 Anos            Não   \n",
+       "1                      Não                      Não    1 Ano            Sim   \n",
+       "2                      Sim                      Sim   2 Anos            Sim   \n",
+       "3                      Sim                      Sim   Mensal            Sim   \n",
+       "4                      Sim                      Não    1 Ano            Não   \n",
+       "\n",
+       "                       MetodoPagamento FaturaMensal FaturaTotal NumTickets  \\\n",
+       "0  Transferência Bancária (Automática)        25.45      809.25        0.0   \n",
+       "1  Transferência Bancária (Automática)        60.15      2421.6        0.0   \n",
+       "2       Cartão de Crédito (Automático)        82.45      5555.3        0.0   \n",
+       "3       Cartão de Crédito (Automático)        99.45       919.4        0.0   \n",
+       "4  Transferência Bancária (Automática)        98.05      3082.1        NaN   \n",
+       "\n",
+       "   NumTicketsTecnico Churn  \n",
+       "0                0.0   0.0  \n",
+       "1                0.0   0.0  \n",
+       "2                0.0   0.0  \n",
+       "3                0.0   1.0  \n",
+       "4                0.0   0.0  \n",
        "\n",
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df_raw.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#deletando coluna Unnamed: 0\n",
+    "\n",
+    "#vamos agora diferenciar, o df_raw eh o df cru, sem tratamento, eh no df em que faremos a limpeza dos dados\n",
+    "df = df_raw\n",
+    "\n",
     "df.drop(\"Unnamed: 0\",axis=1,inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +346,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#coluna BillingDigital\n",
+    "#Se tem billing digital (SIM) vai passar a ser 1\n",
+    "#Se não tem billing digital (NÃO) vai passar a ser 0\n",
+    "df['BillingDigital'] = df['BillingDigital'].map({'Sim': 1, 'Não': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -354,6 +387,7 @@
        "      <th>parceiro</th>\n",
        "      <th>dependentes</th>\n",
        "      <th>tempoDeServico</th>\n",
+       "      <th>BillingDigital</th>\n",
        "      <th>FaturaMensal</th>\n",
        "      <th>NumTickets</th>\n",
        "      <th>NumTicketsTecnico</th>\n",
@@ -368,6 +402,7 @@
        "      <td>4762.000000</td>\n",
        "      <td>4766.000000</td>\n",
        "      <td>4747.000000</td>\n",
+       "      <td>4762.000000</td>\n",
        "      <td>4726.000000</td>\n",
        "      <td>4731.000000</td>\n",
        "      <td>4745.000000</td>\n",
@@ -380,6 +415,7 @@
        "      <td>0.487400</td>\n",
        "      <td>0.304029</td>\n",
        "      <td>32.158205</td>\n",
+       "      <td>0.591978</td>\n",
        "      <td>64.801947</td>\n",
        "      <td>0.503488</td>\n",
        "      <td>0.411170</td>\n",
@@ -392,6 +428,7 @@
        "      <td>0.499894</td>\n",
        "      <td>0.460043</td>\n",
        "      <td>29.592578</td>\n",
+       "      <td>0.491519</td>\n",
        "      <td>35.930051</td>\n",
        "      <td>1.260113</td>\n",
        "      <td>1.230994</td>\n",
@@ -404,6 +441,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>-112.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>-127.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -416,6 +454,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>8.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>34.700000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -428,6 +467,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>29.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>70.400000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -440,6 +480,7 @@
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>56.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>90.400000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -452,6 +493,7 @@
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>190.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>247.000000</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>8.000000</td>\n",
@@ -462,20 +504,38 @@
        "</div>"
       ],
       "text/plain": [
-       "           genero        idoso  ...  NumTicketsTecnico        Churn\n",
-       "count  4759.00000  4735.000000  ...        4745.000000  4736.000000\n",
-       "mean      0.50851     0.163464  ...           0.411170     0.263091\n",
-       "std       0.49998     0.369827  ...           1.230994     0.440358\n",
-       "min       0.00000     0.000000  ...           0.000000     0.000000\n",
-       "25%       0.00000     0.000000  ...           0.000000     0.000000\n",
-       "50%       1.00000     0.000000  ...           0.000000     0.000000\n",
-       "75%       1.00000     0.000000  ...           0.000000     1.000000\n",
-       "max       1.00000     1.000000  ...           8.000000     1.000000\n",
+       "           genero        idoso     parceiro  dependentes  tempoDeServico  \\\n",
+       "count  4759.00000  4735.000000  4762.000000  4766.000000     4747.000000   \n",
+       "mean      0.50851     0.163464     0.487400     0.304029       32.158205   \n",
+       "std       0.49998     0.369827     0.499894     0.460043       29.592578   \n",
+       "min       0.00000     0.000000     0.000000     0.000000     -112.000000   \n",
+       "25%       0.00000     0.000000     0.000000     0.000000        8.000000   \n",
+       "50%       1.00000     0.000000     0.000000     0.000000       29.000000   \n",
+       "75%       1.00000     0.000000     1.000000     1.000000       56.000000   \n",
+       "max       1.00000     1.000000     1.000000     1.000000      190.000000   \n",
        "\n",
-       "[8 rows x 9 columns]"
+       "       BillingDigital  FaturaMensal   NumTickets  NumTicketsTecnico  \\\n",
+       "count     4762.000000   4726.000000  4731.000000        4745.000000   \n",
+       "mean         0.591978     64.801947     0.503488           0.411170   \n",
+       "std          0.491519     35.930051     1.260113           1.230994   \n",
+       "min          0.000000   -127.000000     0.000000           0.000000   \n",
+       "25%          0.000000     34.700000     0.000000           0.000000   \n",
+       "50%          1.000000     70.400000     0.000000           0.000000   \n",
+       "75%          1.000000     90.400000     0.000000           0.000000   \n",
+       "max          1.000000    247.000000     5.000000           8.000000   \n",
+       "\n",
+       "             Churn  \n",
+       "count  4736.000000  \n",
+       "mean      0.263091  \n",
+       "std       0.440358  \n",
+       "min       0.000000  \n",
+       "25%       0.000000  \n",
+       "50%       0.000000  \n",
+       "75%       1.000000  \n",
+       "max       1.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
